--- a/forest-quickstart.tex
+++ b/forest-quickstart.tex
@@ -34,6 +34,8 @@ fairly nice empty nodes/.style={
 \author{Guido Vanden Wyngaerd\\
 guido.vandenwyngaerd@kuleuven.be}
 
+\date{v2,  2020-06-28}
+
 \begin{document}
 
 \maketitle
